moved social icons to include; fixed non-image hero height issue on mobile

--- a/src/assets/css/components/_hero.sass
+++ b/src/assets/css/components/_hero.sass
@@ -10,7 +10,7 @@
         max-width: 100%
 
 .HeroSlidePromo 
-    height: 210px
+    height: 56vw
     background-color: $brand-green
 
     @media (min-width: $bp-md) 
